--- a/bin/main/static/css/jeans_write_body.css
+++ b/bin/main/static/css/jeans_write_body.css
@@ -1,179 +1,1 @@
-.body_root{
-
-}
-
-
-
-.body_lookupload{
-
-  width: 1100px;
-  height: 550px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 16px;
-  display: grid;
-  grid-template-columns : 620px  440px;
-  grid-template-rows:  10px 40px 35px 35px 370px;
-  font-size: 16px;
-  row-gap: 2px;
-  background-color: rgb(224, 224, 224);
-}
-
-.title{
-  font-size: 20px;
-  margin-left: 20px;
-}
-
-.name{
-  margin-left: 20px;
-  display: flex;
-}
-
-.upload{
-  margin-left: 20px;
-  display: flex;
-}
-
-
-
-.img_space{
-  width: 550px;
-  height: 400px;
-  margin-left: 20px;
-}
-
-.upload_right{
-  width: 440px;
-  height: 350px;
-  display: grid;
-  grid-template-columns : 80px 310px 50px;
-  grid-template-rows: 40px 40px 40px 40px 75px 75px;
-  row-gap: 10px;
-  line-height: 40px;
-}
-
-.tag{
-  line-height: 30px;
-}
-
-.Jeans_bule{
-  color :  #92CEF4;
-}
-
-
-.input_name{
-  border:none;
-  width: 200px;
-  height: 20px;
-}
-
- .input_basic {
-   border: none;
-   width: 300px;
-   height: 30px;
- }
-
- .input_tag{
-  border:none;
-  width: 300px;
-  height: 70px;
-  resize: none;
-}
-
-.input_memo{
-  border:none;
-  width: 300px;
-  height: 150px;
-  resize: none;
-}
-
-.save{
-  display: flex;
-  justify-content: flex-end;
-}
-
-.save_button{
-  background-color: #92CEF4;
-  color: white;
-  font-size: 15px;
-  border-radius: 5%;
-  border: 1px #92CEF4;
-  width: 80px;
-  height: 40px;
-  margin-right: 20px;
-}
-
-
-.look_img_container {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1/4;
-  z-index: 3
-}
-
-.look_img_container .look_img_viewport {
-  height: 400px;
-  width: 300px;
-  text-align: center;
-  margin: 0 auto;
-  position: relative;
-  overflow-x: hidden;
-  min-height: 100%;
-  touch-action: pan-y;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-user-drag: none
-}
-
-.look_img_container .look_img_viewport .look_flick_camera {
-  width: 100%;
-  height: 100%;
-  will-change: transform;
-  transform: translate3d(0, 0, 0)
-}
-
-.look_img_container .look_img_viewport .look_flick_camera .flick_panel {
-  width: 300px;
-  height: 400px;
-  display: table;
-  float: left;
-  margin: 0;
-  padding: 0
-}
-
-.look_img_container .look_img_viewport .look_flick_camera .flick_panel > img {
-  height: 100%;
-  width: 100%;
-  display: table-cell;
-  font-weight: 700;
-  text-align: center;
-  vertical-align: middle
-}
-
-.look_img_container .look_img_viewport .look_slide_button {
-  display: block;
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  bottom: 41px;
-  width: 40px;
-  box-sizing: border-box;
-  padding-top: 44px;
-  overflow: visible;
-  border: 0;
-  border-radius: 0;
-  background: 0 0
-}
-
-.look_img_container .look_img_viewport .look_slide_button .look_slide_button_icon {
-  display: inline-block;
-  background-repeat: no-repeat;
-  width: 25px;
-  height: 45px;
-  margin: 0 auto
-}
+.body_lookupload{width:1100px;height:550px;margin-left:auto;margin-right:auto;display:-ms-grid;display:grid;-ms-grid-columns:620px 440px;grid-template-columns:620px 440px;-ms-grid-rows:10px 2px 40px 2px 35px 2px 35px 2px 370px;grid-template-rows:10px 40px 35px 35px 370px;font-size:16px;row-gap:2px;background-color:#e0e0e0}.body_lookupload>:nth-child(1){-ms-grid-row:1;-ms-grid-column:1}.body_lookupload>:nth-child(2){-ms-grid-row:1;-ms-grid-column:2}.body_lookupload>:nth-child(3){-ms-grid-row:3;-ms-grid-column:1}.body_lookupload>:nth-child(4){-ms-grid-row:3;-ms-grid-column:2}.body_lookupload>:nth-child(5){-ms-grid-row:5;-ms-grid-column:1}.body_lookupload>:nth-child(6){-ms-grid-row:5;-ms-grid-column:2}.body_lookupload>:nth-child(7){-ms-grid-row:7;-ms-grid-column:1}.body_lookupload>:nth-child(8){-ms-grid-row:7;-ms-grid-column:2}.body_lookupload>:nth-child(9){-ms-grid-row:9;-ms-grid-column:1}.body_lookupload>:nth-child(10){-ms-grid-row:9;-ms-grid-column:2}.title{font-size:20px;margin-left:20px}.name,.upload{margin-left:20px;display:flex}.img_space{width:550px;height:400px;margin-left:20px}.upload_right{width:440px;height:350px;display:-ms-grid;display:grid;-ms-grid-columns:80px 310px 50px;grid-template-columns:80px 310px 50px;-ms-grid-rows:40px 10px 40px 10px 40px 10px 40px 10px 75px 10px 75px;grid-template-rows:40px 40px 40px 40px 75px 75px;row-gap:10px;line-height:40px}.upload_right>:nth-child(1){-ms-grid-row:1;-ms-grid-column:1}.upload_right>:nth-child(2){-ms-grid-row:1;-ms-grid-column:2}.upload_right>:nth-child(3){-ms-grid-row:1;-ms-grid-column:3}.upload_right>:nth-child(4){-ms-grid-row:3;-ms-grid-column:1}.upload_right>:nth-child(5){-ms-grid-row:3;-ms-grid-column:2}.upload_right>:nth-child(6){-ms-grid-row:3;-ms-grid-column:3}.upload_right>:nth-child(7){-ms-grid-row:5;-ms-grid-column:1}.upload_right>:nth-child(8){-ms-grid-row:5;-ms-grid-column:2}.upload_right>:nth-child(9){-ms-grid-row:5;-ms-grid-column:3}.upload_right>:nth-child(10){-ms-grid-row:7;-ms-grid-column:1}.upload_right>:nth-child(11){-ms-grid-row:7;-ms-grid-column:2}.upload_right>:nth-child(12){-ms-grid-row:7;-ms-grid-column:3}.upload_right>:nth-child(13){-ms-grid-row:9;-ms-grid-column:1}.upload_right>:nth-child(14){-ms-grid-row:9;-ms-grid-column:2}.upload_right>:nth-child(15){-ms-grid-row:9;-ms-grid-column:3}.upload_right>:nth-child(16){-ms-grid-row:11;-ms-grid-column:1}.upload_right>:nth-child(17){-ms-grid-row:11;-ms-grid-column:2}.upload_right>:nth-child(18){-ms-grid-row:11;-ms-grid-column:3}.tag{line-height:30px}.Jeans_bule{color:#92cef4}.input_name{border:0;width:200px;height:20px}.input_basic{border:0;width:300px;height:30px}.input_memo,.input_tag{border:0;width:300px;height:70px;resize:none}.input_memo{height:150px}.save{display:flex;justify-content:flex-end}.save_button{background-color:#92cef4;color:#fff;font-size:15px;border-radius:5%;border:1px #92cef4;width:80px;height:40px;margin-right:20px}.selector{display:inline-block;position:relative;box-sizing:border-box;width:30%;height:35px;border-width:1px;border-style:solid;border-color:#838383;background-color:#efefef;text-align:center;line-height:35px;margin-right:5%}.attachButton{display:none}.selector_span{margin:auto;text-align:center;border-width:1px}
