대댓글&댓글v1

--- a/src/main/resources/static/scss/jeans_info_body.scss
+++ b/src/main/resources/static/scss/jeans_info_body.scss
@@ -17,7 +17,8 @@ input {
 
 body {
   .webview {
-    width: 61.8%;
+    // width: 61.8%;
+    width: 100%;
     .jeans_root {
       .jeans_header {
       }
