--- a/src/main/resources/static/scss/slideShow.scss
+++ b/src/main/resources/static/scss/slideShow.scss
@@ -34,8 +34,8 @@
 				margin: 0;
 				padding: 0;
 				& > img {
-					height: inherit;
-					width: inherit;
+					height: 100%;
+					width: 100%;
 					display: table-cell;
 					font-weight: 700;
 					text-align: center;
