--- a/src/main/resources/static/scss/slideShow.scss
+++ b/src/main/resources/static/scss/slideShow.scss
@@ -34,7 +34,7 @@
 				margin: 0;
 				padding: 0;
 				& > img {
-					height: 100%;
+					// height: 100%;
 					width: 100%;
 					display: table-cell;
 					font-weight: 700;
